--- a/server/views/approval/includes/release.pug
+++ b/server/views/approval/includes/release.pug
@@ -2,12 +2,13 @@ block excludedForm
 
     - var vals = data.reason || ''
 
-    div.pure-g
-        div.pure-u-10-24
-            div.multiple-choice
-                input(type='checkbox' name='reason' id='addressUnsuitable' value='addressUnsuitable' checked=vals.indexOf('addressUnsuitable') !== -1)
-                label(for='addressUnsuitable') The address is unsuitable
-            div.multiple-choice
-                input(type='checkbox' name='reason' id='insufficientTime' value='insufficientTime' checked=vals.indexOf('insufficientTime') !== -1)
-                label(for='insufficientTime') There is insufficient time (less than 4 weeks to conditional release date)
+    div
+        if errorObject.reason
+            p.block.error-message Please select an answer
+        div.multiple-choice
+            input(type='checkbox' name='reason' id='addressUnsuitable' value='addressUnsuitable' checked=vals.indexOf('addressUnsuitable') !== -1)
+            label(for='addressUnsuitable') The address is unsuitable
+        div.multiple-choice
+            input(type='checkbox' name='reason' id='insufficientTime' value='insufficientTime' checked=vals.indexOf('insufficientTime') !== -1)
+            label(for='insufficientTime') There is insufficient time (less than 4 weeks to conditional release date)
 
