Simplify to just nomis IDS (for now)

--- a/server/views/search/includes/offenderSearchForm.pug
+++ b/server/views/search/includes/offenderSearchForm.pug
@@ -6,7 +6,7 @@ div.pure-u-1.searchForm
         div.midPaddingBottom.padLeftRight15.paddingTop
             div.form-group.inline
                 div.pure-u-2-5
-                    label.form-label(for="searchTerm") Offender name, date of birth, or prison number
+                    label.form-label(for="searchTerm") Offender prison numbers
                 div.pure-u-3-5
                 div.pure-u-2-5
                     input.form-control(id="searchTerm" type="text" name="searchTerm")
