LIC-444: Fix typo and css bug

--- a/server/views/licenceConditions/conditionsSummary.pug
+++ b/server/views/licenceConditions/conditionsSummary.pug
@@ -31,7 +31,7 @@ block content
                             i.icon.icon-important
                                 span.visually-hidden Warning
                             strong.bold-small
-                                | Any additional conditions seleted must be reasonable and proportionate to manage the offender's risk
+                                | Any additional conditions selected must be reasonable and proportionate to manage the offender's risk
 
     div.paddingBottom.smallPaddingTop
         div.pure-u-1.inlineButtons
