--- a/server/views/search/results.pug
+++ b/server/views/search/results.pug
@@ -2,17 +2,18 @@ extends ../layout
 
 block content
 
-    div.pure-g.pure-u-1
-        include ../includes/backToCaseList
-
-        div.pure-u-1-2
-            h1#pageHeading.heading-large Search results
-
-        include includes/searchErrors
-        include includes/offenderSearchForm
-
+    div.pure-g
         div.pure-u-1
-            include includes/resultsTable
+            include ../includes/backToCaseList
+
+            div.pure-u-1-2
+                h1#pageHeading.heading-large Search results
+
+            include includes/searchErrors
+            include includes/offenderSearchForm
+
+            div.pure-u-1
+                include includes/resultsTable
 
 block append scripts
     script(src="/public/javascripts/pagination.js?"+version)
