LIC-421: Display PCA submit button

--- a/assets/sass/application.scss
+++ b/assets/sass/application.scss
@@ -253,6 +253,10 @@ $path: "/public/images/";
     padding-left: 15px;
 }
 
+.padLeft30 {
+    padding-left: 30px;
+}
+
 .alignRight {
     text-align: right;
 }
