Caselist columns: change Nomis ID to Prison no.

--- a/server/views/caseList/CATable.pug
+++ b/server/views/caseList/CATable.pug
@@ -2,7 +2,7 @@ table#hdcEligiblePrisoners.largeMarginBottom
     thead
         tr
             th Name
-            th NOMS ID
+            th Prison no.
             th Location
             th HDCED
             th CRD / ARD
