--- a/server/views/search/includes/resultsTable.pug
+++ b/server/views/search/includes/resultsTable.pug
@@ -5,7 +5,7 @@ else
         thead
             tr
                 th Name
-                th NOMS ID
+                th Prison no.
                 th Location
                 th HDCED
                 th CRD / ARD
