--- a/server/views/caseList/DMTable.pug
+++ b/server/views/caseList/DMTable.pug
@@ -2,7 +2,7 @@ table#hdcEligiblePrisoners.largeMarginBottom
     thead
         tr
             th Name
-            th NOMS ID
+            th Prison no.
             th Location
             th HDCED
             th CRD / ARD
