--- a/server/views/finalChecks/confiscationOrder.pug
+++ b/server/views/finalChecks/confiscationOrder.pug
@@ -1,4 +1,5 @@
 extends ../layout
+include ../includes/errorBannerWithDetail
 
 block content
 
@@ -6,15 +7,21 @@ block content
 
     div.pure-g.pure-u-1
         include ../includes/back
+        +errorBannerWithDetail(errorObject, [
+            {field: 'decision', message: 'Select yes or no'},
+            {field: 'confiscationUnitConsulted', message: 'Select yes or no'}
+        ])
         include ../includes/personalDetailsSummary
 
         div.pure-u-1-2
             h2.heading-large Is the offender subject to a confiscation order?
 
+    if errorObject.decision
+        p.block.error-message Select yes or no
     form(method="post")
         input(type="hidden" name="_csrf" value=csrfToken)
         input(type="hidden" name="nomisId" value=nomisId || '')
-        div.smallPaddingTop.paddingBottom.largeMarginBottom
+        div#error-anchor.smallPaddingTop.paddingBottom.largeMarginBottom
 
             div.pure-u-md-1-2.largeMarginBottom
                 div.form-group.inline
@@ -27,6 +34,8 @@ block content
 
                 div#consultedForm.panel.panel-border-narrow.js-hidden
                     p Has the prosecuting/enforcement authority and regional confiscation unit been consulted regarding the proposed release on HDC?
+                    if errorObject.confiscationUnitConsulted
+                        span.block.error-message Select yes or no
                     div.form-group.inline
                         div.multiple-choice
                             input#confiscationUnitConsultedYes(type="radio" checked=confiscationOrderValue === 'Yes'  name="confiscationUnitConsulted" value="Yes")
