--- a/server/views/finalChecks/onRemand.pug
+++ b/server/views/finalChecks/onRemand.pug
@@ -1,4 +1,5 @@
 extends ../layout
+include ../includes/errorBannerWithDetail
 
 block content
 
@@ -6,15 +7,20 @@ block content
 
     div.pure-g.pure-u-1
         include ../includes/back
+        +errorBannerWithDetail(errorObject, [
+            {field: 'decision', message: 'Select yes or no'}
+        ])
         include ../includes/personalDetailsSummary
 
         div.pure-u-1-2
             h2.heading-large Is the offender currently on remand for another offence?
 
+    if errorObject.decision
+        p.block.error-message Select yes or no
     form(method="post")
         input(type="hidden" name="_csrf" value=csrfToken)
         input(type="hidden" name="nomisId" value=nomisId || '')
-        div.smallPaddingTop.paddingBottom.largeMarginBottom
+        div#error-anchor.smallPaddingTop.paddingBottom.largeMarginBottom
 
             div.largePaddingBottom
                 div.form-group.inline
