--- a/server/views/review/includes/licenceSummary.pug
+++ b/server/views/review/includes/licenceSummary.pug
@@ -4,8 +4,18 @@ h1.heading-large Licence details
 div.largeMarginBottom
 
     include ../../taskList/prisonerDetails
+
     // Proposed address
-    h2#curfewAddressDetails.heading-medium.borderBottomLight Proposed curfew address
+    div.pure-g.borderBottomLight
+        div.pure-u-md-1-2
+            h2#curfewAddressDetails.heading-medium Proposed curfew address
+        div.pure-u-md-1-2.alignRight
+            div.pure-u-md-1-2.change-details
+                if (stage === 'PROCESSING_RO' && user.role === 'RO')
+                    a#addressEditLink(href="/hdc/curfew/curfewAddressReview/" + nomisId) Change these details
+                if(stage === 'ELIGIBILITY' && user.role === 'CA')
+                    a#addressEditLink(href="/hdc/proposedAddress/curfewAddress/" + nomisId) Change these details
+
     if typeof errorObject.proposedAddress === 'string'
         p.alert.bold(id='proposed-address-error') #{errorObject.proposedAddress}
     else
@@ -14,21 +24,42 @@ div.largeMarginBottom
     if (licenceStatus.decisions.curfewAddressApproved !== 'rejected')
 
         // Risk
-        h2#riskDetails.heading-medium.borderBottomLight Risk management and victim liaison
+        div.pure-g.borderBottomLight
+            div.pure-u-md-1-2
+                h2#riskDetails.heading-medium Risk management and victim liaison
+            if (stage === 'PROCESSING_RO' && user.role === 'RO')
+                div.pure-u-md-1-2.alignRight
+                    div.pure-u-md-1-2.change-details
+                        a#riskEditLink(href="/hdc/risk/riskManagement/" + nomisId) Change these details
+
         if typeof errorObject.risk === 'string'
             p.alert.bold(id='risk-error') #{errorObject.risk}
         else
             include riskManagement
 
         // Curfew hours
-        h2#curfewHoursDetails.heading-medium.borderBottomLight Proposed HDC curfew hours
+        div.pure-g.borderBottomLight
+            div.pure-u-md-1-2
+                h2#curfewHoursDetails.heading-medium Proposed HDC curfew hours
+            if (stage === 'PROCESSING_RO' && user.role === 'RO')
+                div.pure-u-md-1-2.alignRight
+                    div.pure-u-md-1-2.change-details
+                        a#curfewHoursEditLink(href="/hdc/curfew/curfewHours/" + nomisId) Change these details
+
         if typeof errorObject.curfew === 'string'
             p.alert.bold(id='curfew-hours-error') #{errorObject.curfew}
         else
             include curfewHours
 
-        // Additional conditions
-        h2.heading-medium.borderBottomLight Additional conditions
+        // Additional condition
+        div.pure-g.borderBottomLight
+            div.pure-u-md-1-2
+                h2.heading-medium Additional conditions
+            if (stage === 'PROCESSING_RO' && user.role === 'RO')
+                div.pure-u-md-1-2.alignRight
+                    div.pure-u-md-1-2.change-details
+                        a#conditionsEditLink(href="/hdc/licenceConditions/additionalConditions/" + nomisId) Change these details
+
         if typeof errorObject.licenceConditions === 'string'
             p.alert.bold(id='additional-conditions-error') #{errorObject.licenceConditions}
         else
@@ -38,7 +69,14 @@ div.largeMarginBottom
                 | No additional conditions selected
 
         // Reporting instructions
-        h2#reportingDetails.heading-medium.borderBottomLight Reporting instructions
+        div.pure-g.borderBottomLight
+            div.pure-u-md-1-2
+                h2#reportingDetails.heading-medium Reporting instructions
+            if (stage === 'PROCESSING_RO' && user.role === 'RO')
+                div.pure-u-md-1-2.alignRight
+                    div.pure-u-md-1-2.change-details
+                        a#reportingEditLink(href="/hdc/reporting/reportingInstructions/" + nomisId) Change these details
+
         if typeof errorObject.reporting === 'string'
             p.alert.bold(id='reporting-error') #{errorObject.reporting}
         else
