--- a/server/views/review/includes/licenceSummary.pug
+++ b/server/views/review/includes/licenceSummary.pug
@@ -6,67 +6,71 @@ div.largeMarginBottom
     include ../../taskList/prisonerDetails
 
     // Proposed address
-    div.pure-g.borderBottomLight
-        div.pure-u-md-1-2
-            h2#curfewAddressDetails.heading-medium Proposed curfew address
-        div.pure-u-md-1-2.alignRight
-            div.pure-u-md-1-2.change-details
-                if (stage === 'PROCESSING_RO' && user.role === 'RO')
-                    a#addressEditLink(href="/hdc/curfew/curfewAddressReview/" + nomisId) Change these details
-                if(stage === 'ELIGIBILITY' && user.role === 'CA')
-                    a#addressEditLink(href="/hdc/proposedAddress/curfewAddress/" + nomisId) Change these details
+    div.borderBottom
+        div.pure-g.borderBottomLight
+            div.pure-u-md-1-2
+                h2#curfewAddressDetails.heading-medium Proposed curfew address
+            div.pure-u-md-1-2.alignRight
+                div.pure-u-md-1-2.change-details
+                    if (stage === 'PROCESSING_RO' && user.role === 'RO')
+                        a#addressEditLink(href="/hdc/curfew/curfewAddressReview/" + nomisId) Change these details
+                    if(stage === 'ELIGIBILITY' && user.role === 'CA')
+                        a#addressEditLink(href="/hdc/proposedAddress/curfewAddress/" + nomisId) Change these details
 
-    if typeof errorObject.proposedAddress === 'string'
-        p.alert.bold(id='proposed-address-error') #{errorObject.proposedAddress}
-    else
-        include curfewAddress
+        if typeof errorObject.proposedAddress === 'string'
+            p.alert.bold(id='proposed-address-error') #{errorObject.proposedAddress}
+        else
+            include curfewAddress
 
     if (licenceStatus.decisions.curfewAddressApproved !== 'rejected')
 
         // Risk
-        div.pure-g.borderBottomLight
-            div.pure-u-md-1-2
-                h2#riskDetails.heading-medium Risk management and victim liaison
-            if (stage === 'PROCESSING_RO' && user.role === 'RO')
-                div.pure-u-md-1-2.alignRight
-                    div.pure-u-md-1-2.change-details
-                        a#riskEditLink(href="/hdc/risk/riskManagement/" + nomisId) Change these details
+        div.borderBottom
+            div.pure-g.borderBottomLight
+                div.pure-u-md-1-2
+                    h2#riskDetails.heading-medium Risk management and victim liaison
+                if (stage === 'PROCESSING_RO' && user.role === 'RO')
+                    div.pure-u-md-1-2.alignRight
+                        div.pure-u-md-1-2.change-details
+                            a#riskEditLink(href="/hdc/risk/riskManagement/" + nomisId) Change these details
 
-        if typeof errorObject.risk === 'string'
-            p.alert.bold(id='risk-error') #{errorObject.risk}
-        else
-            include riskManagement
+            if typeof errorObject.risk === 'string'
+                p.alert.bold(id='risk-error') #{errorObject.risk}
+            else
+                include riskManagement
 
         // Curfew hours
-        div.pure-g.borderBottomLight
-            div.pure-u-md-1-2
-                h2#curfewHoursDetails.heading-medium Proposed HDC curfew hours
-            if (stage === 'PROCESSING_RO' && user.role === 'RO')
-                div.pure-u-md-1-2.alignRight
-                    div.pure-u-md-1-2.change-details
-                        a#curfewHoursEditLink(href="/hdc/curfew/curfewHours/" + nomisId) Change these details
+        div.borderBottom
+            div.pure-g.borderBottomLight
+                div.pure-u-md-1-2
+                    h2#curfewHoursDetails.heading-medium Proposed HDC curfew hours
+                if (stage === 'PROCESSING_RO' && user.role === 'RO')
+                    div.pure-u-md-1-2.alignRight
+                        div.pure-u-md-1-2.change-details
+                            a#curfewHoursEditLink(href="/hdc/curfew/curfewHours/" + nomisId) Change these details
 
-        if typeof errorObject.curfew === 'string'
-            p.alert.bold(id='curfew-hours-error') #{errorObject.curfew}
-        else
-            include curfewHours
+            if typeof errorObject.curfew === 'string'
+                p.alert.bold(id='curfew-hours-error') #{errorObject.curfew}
+            else
+                include curfewHours
 
         // Additional condition
-        div.pure-g.borderBottomLight
-            div.pure-u-md-1-2
-                h2.heading-medium Additional conditions
-            if (stage === 'PROCESSING_RO' && user.role === 'RO')
-                div.pure-u-md-1-2.alignRight
-                    div.pure-u-md-1-2.change-details
-                        a#conditionsEditLink(href="/hdc/licenceConditions/additionalConditions/" + nomisId) Change these details
+        div.borderBottom
+            div.pure-g.borderBottomLight
+                div.pure-u-md-1-2
+                    h2.heading-medium Additional conditions
+                if (stage === 'PROCESSING_RO' && user.role === 'RO')
+                    div.pure-u-md-1-2.alignRight
+                        div.pure-u-md-1-2.change-details
+                            a#conditionsEditLink(href="/hdc/licenceConditions/additionalConditions/" + nomisId) Change these details
 
-        if typeof errorObject.licenceConditions === 'string'
-            p.alert.bold(id='additional-conditions-error') #{errorObject.licenceConditions}
-        else
-            if data.licenceConditions && data.licenceConditions.length > 0
-                +additionalConditions()
+            if typeof errorObject.licenceConditions === 'string'
+                p.alert.bold(id='additional-conditions-error') #{errorObject.licenceConditions}
             else
-                | No additional conditions selected
+                if data.licenceConditions && data.licenceConditions.length > 0
+                    +additionalConditions()
+                else
+                    | No additional conditions selected
 
         // Reporting instructions
         div.pure-g.borderBottomLight
