--- a/server/views/caseList/CATable.pug
+++ b/server/views/caseList/CATable.pug
@@ -6,7 +6,7 @@ table#hdcEligiblePrisoners.largeMarginBottom
             th Location
             th HDCED
             th CRD / ARD
-            th Current status
+            th Status
             th
     tbody
         if hdcEligible && hdcEligible.length > 0
