--- a/server/views/layout.pug
+++ b/server/views/layout.pug
@@ -44,19 +44,8 @@ html(lang="en")
         div(id="global-cookie-message")
             p GOV.UK uses cookies to make the site simpler.
                 a(href="https://www.gov.uk/help/cookies", target="_blank", title="Find out more about cookies") Find out more about cookies
-        header(role="banner", id="global-header", class="with-proposition")
-            div(class="header-wrapper")
-                div(class="header-global")
-                    div(class="header-logo")
-                        a(href="/", title="Go to the homepage", id="logo", class="content hmppslogo")
-                            img(src="/public/images/hmpps_logo_small.png", width="54", height="48", alt="")
-                            span  HMPPS
-                if user
-                    div(id="header-user")
-                        span.bold #{user.firstName}, #{user.lastName} &nbsp;&nbsp;|&nbsp;&nbsp;
-                        if user.activeCaseLoad
-                            span.bold #{user.activeCaseLoad.description} &nbsp;&nbsp;|&nbsp;&nbsp;
-                        a(href="/logout") Logout
+
+        include global-header
 
         main.app-container(role="main")
             block content
