--- a/server/views/proposedAddress/curfewAddress.pug
+++ b/server/views/proposedAddress/curfewAddress.pug
@@ -3,19 +3,16 @@ include ./includes/addressForm
 block content
     -var savedAddress = data || {}
 
-    div.pure-g.pure-u-1.borderBottom
+    div.pure-g.pure-u-1
         include ../includes/back
         include ../includes/personalDetailsSummary
 
         h2.heading-large Proposed curfew address
 
-        p.pure-u-1-2 Enter the proposed address that the offender has completed on the returned HDC form
-
     form(method="post" action=submitPath)
         input(type="hidden" name="_csrf" value=csrfToken)
         input(type="hidden" name="nomisId" value=nomisId || '')
         div.paddingBottom.largeMarginBottom
-            h3.heading-medium Preferred address
             +addressForm(0)
 
         //div.form-group.inline.paddingBottom
