--- a/server/views/proposedAddress/includes/addressForm.pug
+++ b/server/views/proposedAddress/includes/addressForm.pug
@@ -26,24 +26,23 @@ mixin addressForm(index, alternative)
 
         div.pure-u-1.pure-u-md-1-2
             div.pure-g
+                div.pure-u-1
+                    h4.heading-small Main occupier
+            div.pure-g
                 div.form-group.pure-u-1.pure-u-sm-10-24
-                    label.form-label(for="occupierName-"+index) Name of main occupier
+                    label.form-label(for="occupierName-"+index) Name
                     input.form-control(id="occupierName-"+index name=addressPosition+"[occupier][name]" value=savedOccupier.name)
 
                 div.form-group.pure-u-1.pure-u-sm-10-24.padLeftRight15
                     label.form-label(for="occupierRelation-"+index) Relation to offender
                     input.form-control(id="occupierRelation-"+index name=addressPosition+"[occupier][relationship]" value=savedOccupier.relationship)
 
-                div.form-group.pure-u-1.pure-u-sm-4-24
-                    label.form-label(for="occupierAge-"+index) Age
-                    input.form-control(id="occupierAge-"+index name=addressPosition+"[occupier][age]" value=savedOccupier.age)
-
             +otherResidents(addressPosition, thisAddress)
 
             div.pure-g
                 div.pure-u-4-5
                     div.form-group.inline.smallPaddingTop
-                        p According to the offender, have they been convicted or cautioned for an offence against any of the above, or any neighbours to the above address?
+                        p According to the offender, have they been convicted or cautioned for an offence against the residents or neighbours at this address?
 
                         div.multiple-choice
                             input(id="cautionedYes-"+index type="radio" checked=thisAddress.cautionedAgainstResident === 'Yes' name=addressPosition+"[cautionedAgainstResident]" value="Yes")
