--- a/server/views/taskList/caSubmitTask.pug
+++ b/server/views/taskList/caSubmitTask.pug
@@ -1,3 +1,6 @@
+- var canSendToDm = licenceStatus.stage === 'PROCESSING_CA' || allowedTransitions.caToDm
+- var canSendToRo = licenceStatus.stage === 'ELIGIBILITY' && allowedTransitions.caToRo
+
 div.largeMarginBottom.borderTop
     h2.heading-medium Submit to decision maker
 
@@ -5,7 +8,7 @@ div.largeMarginBottom.borderTop
 
     div.pure-g
         div.pure-u-3-4
-            if allowedTransitions.caToDm || allowedTransitions.caToRo
+            if canSendToRo || canSendToDm
                 | Ready to submit
             else if licenceStatus.decisions.postponed
                 | Submission unavailable - HDC application postponed
@@ -15,6 +18,6 @@ div.largeMarginBottom.borderTop
                 | Submission unavailable - Tasks not yet complete
 
         div.pure-u-1-4.center
-            if (licenceStatus.stage === 'PROCESSING_CA' && allowedTransitions.caToDm) || (licenceStatus.stage === 'ELIGIBILITY' && allowedTransitions.caToRo)
+            if canSendToDm || canSendToRo
                 a.taskListAction.center.button(href="/hdc/send/" + prisonerInfo.offenderNo)
                     | Continue
