Support youth notice licence (not yet wired in)

--- a/server/views/review/licence.pug
+++ b/server/views/review/licence.pug
@@ -9,4 +9,4 @@ block content
     include ../includes/caseListReturn
 
         if user.role === 'CA' && licenceStatus.decisions.approved
-            a#createPdf.requiredButton.button.smallMarginTop(href="/hdc/pdf/view/"+nomisId target="_blank" role="button") Create licence PDF
+            a#createPdf.requiredButton.button.smallMarginTop(href="/hdc/pdf/view/hdc_ap_pss/"+nomisId target="_blank" role="button") Create licence PDF
