--- a/server/views/pdf/errors.pug
+++ b/server/views/pdf/errors.pug
@@ -11,4 +11,4 @@ block content
     div.pure-u-1.inlineButtons
         a#closeBtn.requiredButton.button.button-secondary.smallMarginTop(href="javascript: window.close();" role="button") Close
 
-        a#backBtn.requiredButton.button.smallMarginTop(href="/hdc/pdf/create/"+nomisId role="button") Create licence PDF
+        a#backBtn.requiredButton.button.smallMarginTop(href="/hdc/pdf/create/"+templateName+"/"+nomisId role="button") Create licence PDF
