--- a/server/views/taskList/eligibilityTask.pug
+++ b/server/views/taskList/eligibilityTask.pug
@@ -1,4 +1,3 @@
-- var unsuitable = licenceStatus.decisions.unsuitable && !licenceStatus.decisions.exceptionalCircumstances
 
 div.largeMarginBottom
     h2.heading-medium HDC eligibility and suitability check
@@ -18,6 +17,7 @@ div.largeMarginBottom
             div.pure-u-1.pure-u-md-3-4
                 div.pure-g
                     div.pure-u-3-4
+
                         div.pure-g.borderTopLight.smallPaddingTopBottom
                             div.pure-u-3-4.padRight15
                                 | Is the offender excluded from HDC?
@@ -27,32 +27,35 @@ div.largeMarginBottom
                                         | Yes
                                     else
                                         | No
+
                         div.pure-g.borderTopLight.smallPaddingTopBottom
                             div.pure-u-3-4.padRight15
                                 | Is the offender presumed unsuitable?
-
                             if licenceStatus.decisions.excluded
                                 div#unsuitableAnswer.pure-u-1-4.center.bold N/A
-
                             else if licenceStatus.tasks.suitability === 'DONE'
                                 div#unsuitableAnswer.pure-u-1-4.center.bold
                                     if licenceStatus.decisions.unsuitable
                                         | Yes
                                     else
                                         | No
-                        if licenceStatus.decisions.exceptionalCircumstances
+
+                        if !licenceStatus.decisions.excluded && licenceStatus.decisions.unsuitable
                             div.pure-g.borderTopLight.smallPaddingTopBottom
                                 div.pure-u-3-4.padRight15
                                     | Exceptional circumstances accepted?
+                                if licenceStatus.tasks.suitability === 'DONE'
+                                    div#exceptionalCircumstances.pure-u-1-4.center.bold
+                                        if licenceStatus.decisions.exceptionalCircumstances
+                                            | Yes
+                                        else
+                                            | No
 
-                                div#exceptionalCircumstances.pure-u-1-4.center.bold
-                                    | Yes
                         div.pure-g.borderTopLight.smallPaddingTopBottom
                             div.pure-u-3-4.padRight15
                                 | Is there less than 4 weeks to go to the offender's CRD?
-                            if licenceStatus.decisions.excluded || unsuitable
+                            if licenceStatus.decisions.excluded || licenceStatus.decisions.effectiveUnsuitable
                                 div#crdTimeAnswer.pure-u-1-4.center.bold N/A
-
                             else if licenceStatus.tasks.crdTime === 'DONE'
                                 div#crdTimeAnswer.pure-u-1-4.center.bold
                                     if licenceStatus.decisions.insufficientTime
@@ -62,7 +65,4 @@ div.largeMarginBottom
 
             div.pure-u-1.pure-u-md-1-4.center
                 a#eligibilityCheckUpdate(href='/hdc/eligibility/excluded/'+prisonerInfo.offenderNo) Change these answers
-
-            // TODO Form printed
-            //div.pure-u-1.borderTopLight
 
