--- a/server/views/taskList/caSubmitRefusalTask.pug
+++ b/server/views/taskList/caSubmitRefusalTask.pug
@@ -6,7 +6,7 @@ div.largeMarginBottom.borderTop
     div.pure-g
         div.pure-u-3-4
             if allowedTransitions.caToDmRefusal
-                | Ready to submit
+                | Ready to submit for refusal
             else
                 | Submission unavailable - Tasks not yet complete
 
