--- a/server/views/taskList/taskList.pug
+++ b/server/views/taskList/taskList.pug
@@ -11,7 +11,7 @@ block content
         if licenceStatus.decisions.excluded
             div.error-banner.marginTopMedium
                 strong.bold The offender is statutorily excluded from HDC
-        else if licenceStatus.decisions.effectiveUnsuitable
+        else if licenceStatus.decisions.unsuitableResult
             div.error-banner.marginTopMedium
                 strong.bold The offender is presumed unsuitable for HDC release
 
