Add #continueBtn to buttons

--- a/server/views/taskList/caSubmitRefusalTask.pug
+++ b/server/views/taskList/caSubmitRefusalTask.pug
@@ -12,5 +12,5 @@ div.largeMarginBottom.borderTop
 
         div.pure-u-1-4.center
             if allowedTransitions.caToDmRefusal
-                a.taskListAction.center.button(href="/hdc/send/" + prisonerInfo.offenderNo)
+                a#continueBtn.taskListAction.center.button(href="/hdc/send/" + prisonerInfo.offenderNo)
                     | Continue
