--- a/server/views/taskList/caSubmitTask.pug
+++ b/server/views/taskList/caSubmitTask.pug
@@ -20,5 +20,5 @@ div.largeMarginBottom.borderTop
 
         div.pure-u-1-4.center
             if allowedTransitions.caToRo || allowedTransitions.caToDm
-                a.taskListAction.center.button(href="/hdc/send/" + prisonerInfo.offenderNo)
+                a#continueBtn.taskListAction.center.button(href="/hdc/send/" + prisonerInfo.offenderNo)
                     | Continue
