--- a/server/views/taskList/caSubmitTask.pug
+++ b/server/views/taskList/caSubmitTask.pug
@@ -1,23 +1,24 @@
 div.largeMarginBottom.borderTop
-    h2.heading-medium Submit to decision maker
+    if licenceStatus.stage === "ELIGIBILITY"
+        h2.heading-medium Submit to responsible officer
+    else
+        h2.heading-medium Submit to decision maker
+
 
     div.borderBottomLight.largeMarginBottom
 
     div.pure-g
         div.pure-u-3-4
-            if licenceStatus.stage === 'PROCESSING_CA'
-                if allowedTransitions.caToDm
-                    | Ready to submit
-                else if licenceStatus.decisions.postponed
-                    | Submission unavailable - HDC application postponed
-                else if licenceStatus.decisions.finalChecksRefused
-                    | Submission unavailable - HDC refused
-                else
-                    | Submission unavailable - Tasks not yet complete
+            if allowedTransitions.caToRo || allowedTransitions.caToDm
+                | Ready to submit
+            else if licenceStatus.decisions.postponed
+                | Submission unavailable - HDC application postponed
+            else if licenceStatus.decisions.finalChecksRefused
+                | Submission unavailable - HDC refused
             else
-                | #{statusLabel}
-        div.pure-u-1-4
-            if licenceStatus.stage === 'PROCESSING_CA' && allowedTransitions.caToDm
+                | Submission unavailable - Tasks not yet complete
 
-                a.taskListAction.center.button(href="/hdc/send/" + prisonerInfo.offenderNo)
+        div.pure-u-1-4.center
+            if allowedTransitions.caToRo || allowedTransitions.caToDm
+                a#continueBtn.taskListAction.center.button(href="/hdc/send/" + prisonerInfo.offenderNo)
                     | Continue
