LIC-463: Refactor submission screens

--- a/server/views/send/ROtoCA.pug
+++ b/server/views/send/ROtoCA.pug
@@ -40,4 +40,5 @@ div#continueBtns.pure-g.paddingBottom
             input(type="hidden" name="nomisId" value=nomisId)
             input(type="hidden" name="sender" value="RO")
             input(type="hidden" name="receiver" value="CA")
+            input(type="hidden" name="transitionType" value="ROtoCA")
             include includes/sendButtons
