--- a/server/views/send/CAtoDMRefusal.pug
+++ b/server/views/send/CAtoDMRefusal.pug
@@ -10,4 +10,5 @@ div#continueBtns.pure-g.paddingBottom
             input(type="hidden" name="nomisId" value=nomisId)
             input(type="hidden" name="sender" value="CA")
             input(type="hidden" name="receiver" value="DM")
+            input(type="hidden" name="transitionType" value="CAtoDMRefusal")
             include includes/sendButtons
