--- a/server/views/send/CAtoRO.pug
+++ b/server/views/send/CAtoRO.pug
@@ -17,4 +17,5 @@ div#continueBtns.pure-g.paddingBottom
             input(type="hidden" name="nomisId" value=nomisId)
             input(type="hidden" name="sender" value="CA")
             input(type="hidden" name="receiver" value="RO")
+            input(type="hidden" name="transitionType" value="CAtoRO")
             include includes/sendButtons
