Add postpone task list to DM task lists

--- a/server/views/taskList/taskList.pug
+++ b/server/views/taskList/taskList.pug
@@ -42,6 +42,7 @@ block content
                     include reportingInstructionsTask
                 include finalChecksTask
                 include postponementTask
+                include HDCRefusalTask
                 include caSubmitTask
 
         if user.role === 'RO'
@@ -65,4 +66,8 @@ block content
                 include additionalConditionsTask
                 include reportingInstructionsTask
             include finalChecksTask
+            if licenceStatus.decisions.confiscationOrder
+                include postponementTask
+
+
             include approvalTask
