--- a/server/views/taskList/postponementTask.pug
+++ b/server/views/taskList/postponementTask.pug
@@ -1,41 +1,31 @@
-div.largeMarginBottom.borderTop
+div.taskListItem.borderTop
     h2.heading-medium Postponement / refuse HDC
 
-    div.borderBottomLight.largeMarginBottom
+    div.borderBottomLight
+        div.pure-g
+            div.pure-u-3-4
+                .pure-g
+                    .pure-u-3-5
+                        if licenceStatus.decisions.postponed
+                            | HDC application postponed
+                        else if licenceStatus.decisions.confiscationOrder
+                            | Use this to indicate that the process is postponed if a confiscation order is in place
+                        else
+                            | Use this to indicate that the process is postponed while any risk management planning actions remain outstanding
 
-    div.pure-g.borderBottomLight.midPaddingBottom
-        div.pure-u-3-4
-            .pure-g
-                .pure-u-3-4
+            div.pure-u-1-4.center
+                p.namedAnchor
+                    a.namedAnchor(name="postpone")
+
+                form(method="post" action="/hdc/finalChecks/postpone/" + nomisId)
+                    input(type="hidden" name="_csrf" value=csrfToken)
+                    input(type="hidden" name="nomisId" value=nomisId || '')
+                    input(type="hidden" name="anchor" value='postpone')
+
                     if licenceStatus.decisions.postponed
-                        | HDC application postponed
+                        input#postponed(type="hidden" name="decision" value="No")
+                        input#continueBtn.taskListAction.center.button.button-secondary(type="submit" value="Resume")
+
                     else
-                        | Use this to indicate that the process is postponed while any risk management planning actions remain outstanding
-        div.pure-u-1-4.center
-            p.namedAnchor
-                a.namedAnchor(name="postpone")
-
-            form(method="post" action="/hdc/finalChecks/postpone/" + nomisId)
-                input(type="hidden" name="_csrf" value=csrfToken)
-                input(type="hidden" name="nomisId" value=nomisId || '')
-                input(type="hidden" name="anchor" value='postpone')
-
-                if licenceStatus.decisions.postponed
-                    input#postponed(type="hidden" name="decision" value="No")
-                    input#continueBtn.taskListAction.center.button.button-secondary(type="submit" value="Resume")
-
-                else
-                    input#postponed(type="hidden" name="decision" value="Yes")
-                    input#continueBtn.taskListAction.center.button.button-secondary(type="submit" value="Postpone")
-
-div.pure-g.borderBottomLight.midPaddingBottom
-    div.pure-u-3-4
-        if licenceStatus.decisions.refused
-            span.alert.bold HDC refused
-
-    div.pure-u-1-4.center
-        a.taskListAction.center.button.button-secondary(href="/hdc/finalChecks/refuse/" + prisonerInfo.offenderNo)
-            if licenceStatus.decisions.refused
-                | Update refusal
-            else
-                | Refuse HDC
+                        input#postponed(type="hidden" name="decision" value="Yes")
+                        input#continueBtn.taskListAction.center.button.button-secondary(type="submit" value="Postpone")
