--- a/server/views/taskList/roSubmitTask.pug
+++ b/server/views/taskList/roSubmitTask.pug
@@ -10,7 +10,7 @@ div.taskListItem.submit
                     | Tasks not yet complete
             else
                 | #{statusLabel}
-        div.pure-u-1-4
+        div.pure-u-1-4.center
             if licenceStatus.stage === 'PROCESSING_RO'
                 //- && allowedTransitions.roToCa
                 a.taskListAction.center.button(href="/hdc/review/licenceDetails/" + prisonerInfo.offenderNo)
